Added google scripts

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
       content="Qriocity as a training institution for IT Graduates assisting them to scale up the IT industry"
     />
     <title>Qriocity</title>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11433484632"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-11433484632');
+    </script>
   </head>
   <body>
     <div id="root"></div>
