--- a/index.html
+++ b/index.html
@@ -11,13 +11,19 @@
     <title>Qriocity</title>
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11433484632"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=AW-11433484632"
+    ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-      gtag('config', 'AW-11433484632');
+      // Replace with your Google Ads ID
+      gtag("config", "AW-11433484632");
     </script>
   </head>
   <body>
