--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         "https://connect.facebook.net/en_US/fbevents.js"
       );
       fbq("init", "6604459609678289");
-      fbq("track", "PageView");
+      fbq("track", "View content");
     </script>
   </head>
   <body>
