--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <title>Qriocity</title>
 
-    <!-- Google tag (gtag.js) -->
+    <!-- Google Pixel Code -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=AW-11433484632"
@@ -21,6 +21,7 @@
         dataLayer.push(arguments);
       }
       gtag("js", new Date());
+
       gtag("config", "AW-11433484632");
     </script>
   </head>
