--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-WNKD4HLZ');</script>
+  <!-- End Google Tag Manager -->
+
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,7 +18,6 @@
       content="Qriocity as a training institution for IT Graduates assisting them to scale up the IT industry"
     />
     <title>Qriocity</title>
-
     <!-- Google Pixel Code -->
     <script
       async
@@ -27,6 +35,10 @@
     <!-- Combined Meta Pixel Code -->
   </head>
   <body>
+    
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WNKD4HLZ"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  
     <div id="root"></div>
 
     <script type="module" src="/src/main.jsx"></script>
