--- a/index.html
+++ b/index.html
@@ -26,13 +26,37 @@
         f.parentNode.insertBefore(j, f);
       })(window, document, "script", "dataLayer", "GTM-WNKD4HLZ");
     </script>
+
     <!-- End Google Tag Manager -->
 
+    <!--Microsoft Clarity -->
+
+    <script type="text/javascript">
+      (function (c, l, a, r, i, t, y) {
+        c[a] =
+          c[a] ||
+          function () {
+            (c[a].q = c[a].q || []).push(arguments);
+          };
+        t = l.createElement(r);
+        t.async = 1;
+        t.src = "https://www.clarity.ms/tag/" + i;
+        y = l.getElementsByTagName(r)[0];
+        y.parentNode.insertBefore(t, y);
+      })(window, document, "clarity", "script", "uo0orjcbf8");
+    </script>
+
+    
+
+    <!--End Microsoft clarity-->
+
+
     <!-- Google Pixel Code -->
-    <script
+    <!-- <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=AW-11517624771"
     ></script>
+
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
@@ -40,8 +64,11 @@
       }
       gtag("js", new Date());
       gtag("config", "AW-11517624771");
-    </script>
+    </script> -->
+
     <!-- End Google Pixel Code -->
+
+
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
@@ -53,6 +80,7 @@
         style="display: none; visibility: hidden"
       ></iframe>
     </noscript>
+
     <!-- End Google Tag Manager (noscript) -->
 
     <!-- React Root -->
