uncommand pixe code

--- a/index.html
+++ b/index.html
@@ -46,13 +46,10 @@
       })(window, document, "clarity", "script", "uo0orjcbf8");
     </script>
 
-    
-
     <!--End Microsoft clarity-->
 
-
     <!-- Google Pixel Code -->
-    <!-- <script
+    <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=AW-11517624771"
     ></script>
@@ -64,11 +61,9 @@
       }
       gtag("js", new Date());
       gtag("config", "AW-11517624771");
-    </script> -->
+    </script>
 
     <!-- End Google Pixel Code -->
-
-
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
