--- a/index.html
+++ b/index.html
@@ -24,10 +24,8 @@
         j.async = true;
         j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
         f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-WNKD4HLZ");
+      })(window, document, "script", "dataLayer", "GTM-NNLKLS24");
     </script>
-
-    <!-- End Google Tag Manager -->
 
     <!--Microsoft Clarity -->
 
@@ -46,10 +44,9 @@
       })(window, document, "clarity", "script", "uo0orjcbf8");
     </script>
 
-    <!--End Microsoft clarity-->
-
     <!-- Google Pixel Code -->
-    <script
+
+    <!-- <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=AW-11517624771"
     ></script>
@@ -61,22 +58,18 @@
       }
       gtag("js", new Date());
       gtag("config", "AW-11517624771");
-    </script>
-
-    <!-- End Google Pixel Code -->
+    </script> -->
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
-    <noscript>
-      <iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-WNKD4HLZ"
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-NNLKLS24"
         height="0"
         width="0"
         style="display: none; visibility: hidden"
-      ></iframe>
-    </noscript>
-
-    <!-- End Google Tag Manager (noscript) -->
+      ></iframe
+    ></noscript>
 
     <!-- React Root -->
     <div id="root"></div>
