--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
       name="description"
       content="Qriocity as a training institution for IT Graduates assisting them to scale up the IT industry"
     />
+
+      <!-- Facebook Domain Verification -->
+    <meta
+      name="facebook-domain-verification"
+      content="92js2dwv5vdzcw5ogl22ezost0cbhv"
+    />
     <title>Qriocity</title>
 
     <!-- Favicon -->
